[package]
name = "voso"
description = "Voso is a Rust WebRTC server using mediasoup, acting as a beta audio/voice relay for Revolt"
version = "0.3.0-alpha.1"
authors = ["Martin Loffler <me@fatalerrorcoded.eu>"]
edition = "2018"
repository = "https://gitlab.insrt.uk/revolt/voso"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.8.3"
lazy_static = "1.4.0"

futures = "0.3.14"
tokio = { version = "1.4.0", features = ["full"] }
warp = "0.3.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
