[package]
name = "vortex"
description = "Vortex is a Rust WebRTC server using mediasoup, acting as a beta audio/voice relay for Revolt"
version = "0.3.0-alpha.1"
authors = ["Martin Loffler <me@fatalerrorcoded.eu>"]
edition = "2018"

repository = "https://gitlab.insrt.uk/revolt/vortex"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Environment, logging
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.9.0"
lazy_static = "1.4.0"

# Miscellaneous
rand = "0.8.3"
base64 = "0.13.0"
once_cell = "1.7.2"

# Futures, HTTP
futures = "0.3.14"
tokio = { version = "1.4.0", features = ["full"] }
warp = "0.3.1"

# Serialization, errors
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.21", features = ["derive"] }

# RTC
mediasoup = "0.8.5"

[patch.crates-io]
mediasoup = { git = "https://github.com/fatalerrorcoded/mediasoup" }
